--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "groq-sdk": "^0.37.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "sqlite3": "^5.1.7"
